--- a/style.css
+++ b/style.css
@@ -1,7 +1,61 @@
-body{
+body {
+
+}
+section {
+  text-align: center;
+}
+
+h1 {
+  font-size: 8vw;
+  color: grey;
+}
+
+
+.keys {
+  display:flex;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  justify-content: center;
+}
+
+.white {
+  border: .1em solid black;
+  border-radius: .4em;
+  width: 6vw;
+  height: 15vh;
+  margin: .2em;
+  text-align: center;
+  box-shadow: 2px 8px #888888;
+}
+
+.black-keys{
+  display: flex;
+  color: white;
+  text-align: center;
+}
+
+.black{
+  background-color: rgba(0,0,0, .8);
+  align-self:flex-start;
+  border: .1em solid white;
+  border-radius: .4em;
+  width: 5vw;
+  height: 14vh;
+  margin: .1em;
+  box-shadow: 2px 6px #888888;
+}
+
+.black-keys:hover, .white:hover {
+  cursor: pointer;
+}
+
+.black:active {
+  background-color: rgba(0,0,0, .9);
+  box-shadow: 2px 2px #888888;
 
 }
 
-h1{
-  color: grey;
+.white:active {
+  box-shadow: 2px 2px #888888;
+  background-color: rgba(242,242,242, .7);
 }
